Added some comments

--- a/pymaceuticals_starter.ipynb
+++ b/pymaceuticals_starter.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +128,7 @@
        "4           32.997729                 1  "
       ]
      },
-     "execution_count": 160,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -174,7 +174,7 @@
    "source": [
     "# Checking the number of mice.\n",
     "num_mice = complete_df[\"Mouse ID\"].nunique()\n",
-    "num_mice"
+    "print(num_mice)"
    ]
   },
   {
@@ -564,24 +564,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "248"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "248\n"
+     ]
     }
    ],
    "source": [
     "# Checking the number of mice in the clean DataFrame.\n",
     "num_mice = clean_df[\"Mouse ID\"].nunique()\n",
-    "num_mice"
+    "print(num_mice)"
    ]
   },
   {
@@ -739,8 +736,11 @@
    ],
    "source": [
     "# Generate a summary statistics table of mean, median, variance, standard deviation, and SEM of the tumor volume for each regimen\n",
+    "#group by regimen\n",
     "summary_group = clean_df.groupby(\"Drug Regimen\")\n",
+    "#aggregate Tumor volume on desired metrics\n",
     "summary_df = summary_group.agg({\"Tumor Volume (mm3)\": ['mean', 'median','var','std','sem']})\n",
+    "#label columns\n",
     "summary_df.columns = [\"Volume Mean\",\"Median Volume\",\"Volume Variance\",\"Volume SD\", \"SEM\"]\n",
     "summary_df\n"
    ]
@@ -784,7 +784,7 @@
     "# Generate a bar plot showing the total number of unique mice tested on each drug regimen using pandas.\n",
     "sex_group = clean_df.groupby([\"Drug Regimen\",\"Sex\"])\n",
     "sex_chart_df = sex_group[\"Mouse ID\"].nunique().unstack()\n",
-    "\n",
+    "#create and format plot\n",
     "ax = sex_chart_df.plot.bar(figsize = (10,6), fontsize = 13, color = [\"indigo\",\"green\"], rot = 30)\n",
     "ax.set_title(\"Sex Distribution\", fontsize = 22)\n",
     "ax.set_ylabel(\"Sex Count\", fontsize = 15)\n",
@@ -816,15 +816,15 @@
     "    \"Male\" : sex_chart_df[\"Male\"].values,\n",
     "    \"Female\": sex_chart_df[\"Female\"].values\n",
     "}\n",
-    "\n",
+    "# bar width and x position for each bar\n",
     "width = 0.35\n",
     "x_pos = np.arange(len(y_axis[\"Male\"]))\n",
     "\n",
     "fig, ax = plt.subplots(figsize = (10,6))\n",
-    "\n",
+    "#place Male bars one 'width' away from Female bars\n",
     "plt.bar(x_pos, y_axis[\"Female\"], width, label = \"Female\", color = \"indigo\")\n",
     "plt.bar(x_pos + width, y_axis[\"Male\"], width, label = \"Male\", color = \"green\")\n",
-    "\n",
+    "#plot formatting\n",
     "plt.xticks(x_pos + width / 2, x_labels, rotation = 30)\n",
     "plt.title(\"Sex Distribution\", fontsize = 22)\n",
     "plt.ylabel(\"Sex Count\", fontsize = 15)\n",
@@ -868,7 +868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1113,7 +1113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1129,8 +1129,7 @@
       "36.321345799999996\n",
       "\n",
       "There are 0 potential outliers in the data set for Ceftamin.\n",
-      "\n",
-      "Capomulin\n"
+      "\n"
      ]
     }
    ],
@@ -1173,7 +1172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1190,7 +1189,9 @@
    "source": [
     "# Generate a box plot of the final tumor volume of each mouse across four regimens of interest\n",
     "fig, ax = plt.subplots(figsize = (15,9))\n",
+    "# List comprehension: Creating a list of volume data lists from my dictionary above.\n",
     "data_sets = [all_volumes.loc[all_volumes[\"Drug Regimen\"] == list(regimens_dict.keys())[i],\"Tumor Volume (mm3)\"] for i in range(len(regimens_dict.keys()))]\n",
+    "# create plot and format\n",
     "ax.boxplot(data_sets,\n",
     "           patch_artist = True,\n",
     "           boxprops = {\"facecolor\" : \"indigo\", \"color\" : \"green\"},\n",
@@ -1214,7 +1215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1237,7 +1238,7 @@
     "plot_data = plot_data.loc[plot_data[\"Mouse ID\"] == mouse_id,:][[\"Tumor Volume (mm3)\", \"Timepoint\"]]\n",
     "#set index to timepoint\n",
     "plot_data = plot_data.set_index(\"Timepoint\")\n",
-    "#plot\n",
+    "#create and format plot\n",
     "fig, ax = plt.subplots(figsize = (10,6))\n",
     "ax.plot(plot_data, color = \"indigo\")\n",
     "ax.grid(True)\n",
@@ -1251,28 +1252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "15"
-      ]
-     },
-     "execution_count": 147,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "test = clean_df.loc[clean_df[\"Drug Regimen\"] == \"Capomulin\",:][[\"Mouse ID\", \"Tumor Volume (mm3)\",\"Weight (g)\"]]\n",
-    "test[\"Weight (g)\"].min()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1288,10 +1268,14 @@
    ],
    "source": [
     "# Generate a scatter plot of average tumor volume vs. mouse weight for the Capomulin regimen\n",
+    "# get a dataframe of just Capomulin data and the columns we need\n",
     "weight_volume_df = clean_df.loc[clean_df[\"Drug Regimen\"] == \"Capomulin\",:][[\"Mouse ID\", \"Tumor Volume (mm3)\",\"Weight (g)\"]]\n",
+    "# group by mouse ID and get average\n",
     "weight_volume_df = weight_volume_df.groupby(\"Mouse ID\").mean()\n",
+    "# extract our 2 axis values\n",
     "x_values = weight_volume_df[\"Weight (g)\"]\n",
     "y_values = weight_volume_df[\"Tumor Volume (mm3)\"]\n",
+    "#create and format plot\n",
     "fig, ax = plt.subplots(figsize = (10,6))\n",
     "ax.scatter(x_values, y_values, color = \"indigo\")\n",
     "ax.grid(True)\n",
@@ -1311,7 +1295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1337,14 +1321,16 @@
     "# Calculate the correlation coefficient and linear regression model between\n",
     "# mouse weight and average tumor volume for the Capomulin treatment. \n",
     "# Plot the linear regression model on top of the previous scatter plot.\n",
-    "\n",
+    "#use scipy to get linear regression function\n",
     "(slope, intercept, rvalue, pvalue, stderr) = linregress(x_values, y_values)\n",
+    "#get the y values for my line\n",
     "regress_values = x_values * slope + intercept\n",
+    "#get equation for annotation.\n",
     "line_eq = f\"y = {slope.round(2)}x + {intercept.round(2)}\"\n",
-    "\n",
+    "#print correlation values\n",
     "print(f\"The correlation coefficient is {rvalue.round(4)}\")\n",
     "print(f\"The coefficient of determination (r^2) is {(rvalue**2).round(4)}\")\n",
-    "\n",
+    "#create and format plot\n",
     "fig, ax = plt.subplots(figsize = (10,6))\n",
     "ax.scatter(x_values, y_values, color = \"indigo\")\n",
     "ax.plot(x_values, regress_values, color = \"g\")\n",
